--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,15 @@ android {
         versionName "1.0"
     }
 
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a'
+            universalApk false
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
